<resources>
    <string name="app_name">Burn Rubber</string>
    <string name="file_no_label_text">File #: </string>
    <string name="hazmat_flag_text">HAZMAT</string>
    <string name="appt_date_label_text">Apt. date: </string>
    <string name="appt_time_label">Apt. time: </string>
    <string name="container_no_label_text">Container #: </string>
    <string name="chassis_no_label_text">Chassis #: </string>
    <string name="leg_no_label_text">Leg #</string>
    <string name="leg_complete_text">Done</string>
    <string name="leg_from_label_text">From</string>
    <string name="leg_to_label_text">To</string>
    <string name="pieces_label_text">Pieces</string>
    <string name="weight_label_text">Weight</string>
    <string name="seal_label_text">Seal</string>
    <string name="destination_label_text">Destination</string>
    <string name="bol_label_text">BOL</string>
    <string name="pages_of_bol_label_text">Pages of BOL</string>
    <string name="pallets_label_text">Pallets</string>
    <string name="commodity_label_text">Commodity</string>
    <string name="count_flag_text">*COUNT*</string>
    <string name="weight_flag_text">Weight</string>
    <string name="confirm_button_text">ACCEPT</string>
    <string name="reject_button_text">REJECT</string>
    <string name="msg_button_text">MSG</string>
    <string name="forms_button_text">Forms</string>
    <string name="trip_history_button_text">Trip History</string>
    <string name="directions_button_text">Directions</string>
    <string name="start_file_button_text">Start File</string>
    <string name="order_image_button_text">Order Image</string>
    <string name="dvir_help_button_text">Help</string>
    <string name="logoff_button_text">Logoff</string>
    <string name="return_button_text">Return</string>
    <string name="arrive_button_text">Arrive</string>
    <string name="depart_button_text">Depart</string>
    <string name="endFile_button_text">End File</string>
    <string name="outbound_form_button_text">Outbound Form</string>
    <string name="auth_progress_title">User Login</string>
    <string name="auth_progress_message">Authenticating user&#8230;</string>
    <string name="logout_progress_title">User Logoff</string>
    <string name="logout_progress_message">Logging off&#8230;</string>
    <string name="auth_error_dialog_title">Login Error</string>
    <string name="reject_order_dialog_title">Reject Order</string>
    <string name="reject_order_dialog_message">Are you sure you want to reject File # %s ?</string>
    <string name="edit_arrive_date_time_title">Edit Arrive Date &amp; Time</string>
    <string name="edit_depart_date_time_title">Edit Depart Date &amp; Time</string>
    <string name="container_chassis_error_title">Data Required</string>
    <string name="container_chassis_error_message">You must enter the Container # &amp; Chassis # to continue.</string>
    <string name="user_name_label">Driver #:</string>
    <string name="password_label">Password:</string>
    <string name="login_button_text">Login</string>
    <string name="canned_message_button_text">Canned</string>
    <string name="purge_message_button_text">Delete</string>
    <string name="cancel_message_button_text">Back</string>
    <string name="message_edittext_hint">Type message...</string>
    <string name="cancel_form_button_text">Cancel</string>
    <string name="send_button_text">Send</string>
    <string name="online">ONLINE</string>
    <string name="online_drayage">ONLINE INTERMODAL</string>
    <string name="online_xdock">ONLINE CROSSDOCK</string>
    <string name="offline">OFFLINE</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="delete_message_menu_item_text">Delete Message</string>
    <string name="message_options_menu_title">Message Options</string>
    <string name="delete_message_dialog_title">Delete Message</string>
    <string name="delete_message_dialog_message">Are you sure you want to delete this message?</string>
    <string name="delete_order_menu_item_text">Delete Trip</string>
    <string name="order_options_menu_title">Trip History Options</string>
    <string name="delete_order_dialog_title">Delete Trip</string>
    <string name="delete_order_dialog_message">Are you sure you want to delete this trip?</string>
    <string name="dvir_help_dialog_title">DVIR Help</string>
    <string name="dvir_help_dialog_message">LFO = Left front outside\nLFI = Left front inside\nRRO = Right rear outside\nRRI = Right rear inside\n\nR/S = Right side\nL/S = Left side\n\nR&amp;R = Remove &amp; Replace</string>
    <string name="canned_message_dialog_title">Select Message</string>
    <string name="canned_message_dialog_cancel_button">Back</string>
    <string name="you_are_offline">You Are Offline</string>
    <string name="log_off">Log Off</string>
    <string name="intermodal">Intermodal</string>
    <string name="crossdock">Crossdock</string>
    <string name="select_online_system">Select system</string>
    <string name="tab_message">MSG</string>
    <string name="tab_orders">Orders</string>
    <string name="tab_orders_history">Order History</string>
    <string name="tab_forms">Forms</string>
    <string name="file_in_progress">File in progress...</string>
    <string name="fail_to_send_request">Your request is not sent to the server yet.</string>
    <string name="msg_not_sent">Your message is not sent</string>
    <string name="accept_file_msg_">"You have accepted File #"</string>
    <string name="start_file_msg">"You have started File #"</string>
    <string name="reject">Reject</string>
    <string name="enter_new_container">Please enter new \'Container #\'</string>
    <string name="required_online">You must be online to complete this action</string>
</resources>
