<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dp">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight="10dp"
	        android:text="@string/user_name_label" />
	    <EditText
	        android:id="@+id/userNameEditText"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dp">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight="10dp"
	        android:text="@string/password_label" />
	    <EditText
	        android:id="@+id/passwordEditText"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:inputType="number" />
    </LinearLayout>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_button_text" />
</LinearLayout>
