<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/leg_from_label_text" />
        <TextView
            android:id="@+id/companyNameFromText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/addressFromText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
	            android:id="@+id/cityFromText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	        <TextView
	            android:id="@+id/stateFromText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	        <TextView
	            android:id="@+id/zipcodeFromText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
        </LinearLayout>
		<LinearLayout
		    android:id="@+id/legFromExtrasLayout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_marginTop="10dp"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp" />       
    </LinearLayout>
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <Button
	        android:id="@+id/arriveFromButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:text="@string/arrive_button_text" />
	    <Button
	        android:id="@+id/departFromButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentEnd="true"
	        android:text="@string/depart_button_text" />
	</RelativeLayout>
    <ImageView
	    android:src="@android:drawable/divider_horizontal_dark"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:scaleType="fitXY"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:paddingBottom="2dp"
	    android:paddingTop="2dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:text="@string/leg_to_label_text" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:orientation="vertical">
		        <TextView
		            android:id="@+id/companyNameToText"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" />
		        <TextView
		            android:id="@+id/addressToText"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" />
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal">
		            <TextView
			            android:id="@+id/cityToText"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" />
			        <TextView
			            android:id="@+id/stateToText"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" />
			        <TextView
			            android:id="@+id/zipcodeToText"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" />
		        </LinearLayout>
	        </LinearLayout>
        	<LinearLayout
			    android:id="@+id/legToExtrasLayout"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="2"
			    android:orientation="vertical" />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginTop="10dp"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp">
	        <TextView
	            android:id="@+id/countFlagText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/count_flag_text" />
	        <TextView
	            android:id="@+id/weightFlagText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/weight_flag_text" />
	    </LinearLayout>
    </LinearLayout>
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <Button
	        android:id="@+id/arriveToButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:text="@string/arrive_button_text" />
	    <Button
	        android:id="@+id/outboundFormButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/outbound_form_button_text" />
	    <Button
	        android:id="@+id/departToButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentEnd="true"
	        android:text="@string/depart_button_text" />
        <Button
            android:id="@+id/endFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/endFile_button_text" />
	</RelativeLayout>
</LinearLayout>
